--- a/css/main.css
+++ b/css/main.css
@@ -1,30 +1,88 @@
-
 *{
-    margin:0;
     padding: 0;
+    margin: 0;
+    box-sizing: border-box;
     font-family: sans-serif;
 }
-body{
-    overflow-x:hidden;
+.site-header{
+    width:100% ;
+    height: 400%;
+    background: linear-gradient(57deg,hsl(171, 100%, 39%),#1e4d92);
+    clip-path:polygon(0% 0%,100% 0%, 100% 78%,0% 100%)
 }
-.container{
+nav{
     width: 100%;
-    padding: 10;
-    height: 100vh;
-    background-color:blue;
-    clip-path: polygon(0% 0%, 100% 0, 100% 50%, 100% 82%, 0 48%);
-
+    height: 100px;
+    display: flex;
+    color:white;
+    justify-content: space-between;
+    padding: 20px;
 }
+.logo{
+    width: 50%;
+    height: 100px
+}
+.logo h1{
+    line-height: 100px;
+    padding-left: 50px;
+}
+
 ul{
     display: flex;
-    justify-content: flex-end;
-    list-style: none;
+    float: right;
+    margin-right: 50px;
+    margin-top: 40px;
 }
 ul li{
-    padding: 10px;
+    list-style: none;
 }
 ul li a{
+    color: white;
     text-decoration: none;
-    color:#000;
+    padding: 10px;
+}
+ul li a:hover{
+    color:red;
+}
+section{
+    display: flex;
+}
+.leftside{
+    width: 45%;
+    height: auto;
+    overflow:hidden;
+    margin-top:20px;
+}
+.leftside img{
+    width: 600px;
+    height:500px ;
+}
+.rightside{
+    width: 55%;
+    height: 300px;
+    color:white;
+    text-align: center;
+    margin-top:80px;
+    padding: 40px;
+}
+.rightside h1{
+    font-size: 50px;
+    font-weight: 900;
     text-transform: uppercase;
+}
+.rightside p{
+    font-size: 1.1rem;
+    padding:30px 0;
+}
+.rightside button{
+    font-size: 17px;
+    font-weight: bold;
+    color:white;
+    text-transform: uppercase;
+    background: linear-gradient(57deg,#00c6a7,#1e4d92);
+    border-radius: 4px;
+    padding:20px 35px;
+}
+.rightside button:hover{
+    background: linear-gradient(57deg,#1e4d92,#00c6a7);
 }
