--- a/css/about.css
+++ b/css/about.css
@@ -46,13 +46,16 @@ ul li a:hover{
 }
 h2{
     text-align: center;
-    margin-top: 5%;
+    margin-top:5%;
 }
 p{
-    font-size: 20px;
+    font-size:25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 footer {
-    margin-top:225px;
+    margin-top:0;
     background:#bdbdbd;
     padding:30px;
     text-align: center;
@@ -61,10 +64,18 @@ footer {
 h3{
     text-decoration: underline;
     font-weight: bold;
+    font-size: 20px;
+    margin-left:6%;
 }
 #course-name{
     font-weight: bold;
 }
 .information{
-    margin-left:2%;
+    margin-left:8%;
+}
+.body{
+    margin-top: -100px;
+    background-image: url('../images/7.jpeg');
+    background-size: cover;
+    height: 70vh;
 }
