--- a/css/experience.css
+++ b/css/experience.css
@@ -7,7 +7,7 @@
 .site-header{
     width:100%;
     height:15vh;
-    background: linear-gradient(57deg,hsl(171, 100%, 39%),#1e4d92);
+    background: linear-gradient(57deg,hsla(101, 79%, 54%, 0.486),#16c7a1,#0e2344bd);
 }
 nav{
     width: 100%;
@@ -16,6 +16,7 @@ nav{
     color:white;
     justify-content: space-between;
     padding: 20px;
+    text-transform: uppercase;
 }
 .logo{
     width: 50%;
@@ -25,7 +26,6 @@ nav{
     line-height: 50px;
     padding-left: 40px;
 }
-
 ul{
     display: flex;
     float: right;
@@ -41,25 +41,30 @@ ul li a{
     padding: 10px;
 }
 ul li a:hover{
-    color:red;
+    color:blue;
 }
 h2{
     text-align: center;
-    margin-top: 5%;
-}
-footer {
     margin-top:5%;
+}
+footer {  
     background:#bdbdbd;
     padding:30px;
     text-align: center;
     color: rgb(31, 139, 172);
 }
 .btn{
-    background-color: #487e95;
+    background-color:rgb(37, 144, 206);
     width: 140px;
-    height: 5vh;
-    border-radius: 5px;
-    margin-left:80%;
+    height: 6vh;
+    border-radius: 16px;
+    margin-left:70%;
+    text-transform: uppercase;
+    margin-top:50px;
+}
+.btn :hover{
+    background:linear-gradient(57deg,#23839b,#6be4ca);
+    border-radius:15px;
 }
 .content-body{
     width: 70%;
@@ -83,4 +88,10 @@ footer {
     background-color:#16c79a;
     margin-left: 15px;
     font-size: 20px;
+}
+.container{
+    background-image: url('../images/0.jpg');
+    background-size: cover;
+    height: 90vh;
+    margin-top:-50px;
 }
